<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_panel_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_arrow_back"
            android:padding="8dp"
            android:background="@drawable/bg_ripple_transparent_oval"
            app:layout_constraintBottom_toBottomOf="@+id/chat_name_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chat_name_tv" />

        <TextView
            android:id="@+id/chat_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            style="@style/TextView.White.24"
            app:layout_constraintStart_toEndOf="@+id/back_iv"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Alex123" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white_transparent_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat_name_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loading_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_content_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_panel_container">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_my_message"
            android:paddingVertical="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/messages_empty_tv"
            style="@style/TextView.White.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/here_empty_label"
            tools:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/view"/>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white_transparent_40"
            app:layout_constraintBottom_toTopOf="@+id/message_et"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/message_et"
            style="@style/EditText.OutlinedEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="150dp"
            android:layout_margin="16dp"
            android:hint="@string/message_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/send_btn"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:enabled="false"
            android:src="@drawable/ic_send"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="@+id/message_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/message_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/error_container_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/error"
            layout="@layout/layout_error" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/repeat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>